--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clean-react",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts":{
+  "scripts": {
     "test": "jest --passWithNoTests",
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/faker": "^5.1.7",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -19,6 +20,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
+    "faker": "^5.4.0",
     "git-commit-msg-linter": "^3.0.4",
     "husky": "^5.2.0",
     "jest": "^26.6.3",
