--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "jsx": "react",
     "rootDir": "src",
     "baseUrl": "src",
+    "paths":{
+      "@/*":["*"]
+    },
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
