--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "paths":{
       "@/*":["*"]
     },
-    "strict": true,
+    // "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
