--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/faker": "^5.1.7",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "eslint": "^7.22.0",
     "eslint-config-standard-with-typescript": "11",
@@ -30,6 +32,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
