--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"webpack-dev-server --open",
+    "start": "webpack-dev-server --open",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
@@ -19,18 +19,25 @@
     "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.2",
     "eslint": "^7.22.0",
     "eslint-config-standard-with-typescript": "11",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-standard": "^5.0.0",
     "faker": "^5.4.0",
     "git-commit-msg-linter": "^3.0.4",
     "husky": "^5.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.4",
+    "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
